--- a/main.html
+++ b/main.html
@@ -89,7 +89,7 @@
                                 of spending time together and building trust. My intention was to capture their
                                 personality in a way that allows viewers to feel connected to the film.
                             </p>
-                            <a href="photography.html" class="panel-link">VIEW PROJECT </a>
+                            <a href="film.html" class="panel-link">VIEW PROJECT </a>
                         </div>
                     </article>
 
@@ -105,7 +105,7 @@
                                 focused on animal skulls, using crosshatching to explore form, texture, and
                                 contrast.
                             </p>
-                            <a href="photography.html" class="panel-link">VIEW PROJECT </a>
+                            <a href="art.html" class="panel-link">VIEW PROJECT </a>
                         </div>
                     </article>
                 </div>
