--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
            <br><br>
            I follow moods, curiosity, and moments that make me stop and look twice. 
            If something feels interesting, awkward, or even slightly strange, 
-           that's usually a good. You'll find my photography, film, and art here. 
+           that's usually a good sign. You'll find my photography, film, and art here. 
            Sometimes it's about people, sometimes about vibes, 
            sometimes just a feeling I couldn't shake off. 
            <br><br>
